--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -114,9 +114,13 @@ jobs:
           name: hpcflow-${{ env.vers }}-${{ matrix.executable_os }}-build
           path: pyinstaller/build/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}
 
-      - name: Run test suite on the frozen app
+      - name: Run test suite on the frozen app (file)
         run: |
           pyinstaller/dist/onefile/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} test
+
+      - name: Run test suite on the frozen app (folder)
+        run: |
+          pyinstaller/dist/onedir/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}-dir/${{ executable_name }}-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} test
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -186,6 +190,10 @@ jobs:
           name: hpcflow-${{ env.vers }}-linux-build
           path: pyinstaller/build/hpcflow-${{ env.vers }}-linux
 
-      - name: Run test suite on the frozen app
+      - name: Run test suite on the frozen app (file)
         run: |
           pyinstaller/dist/onefile/hpcflow-${{ env.vers }}-linux test
+
+      - name: Run test suite on the frozen app (folder)
+        run: |
+          pyinstaller/dist/onedir/hpcflow-${{ env.vers }}-linux-dir/${{ executable_name }}-${{ env.vers }}-${{ matrix.executable_os }}-linux-dir test
