--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -183,44 +183,40 @@ jobs:
       - name: Install dependencies
         run: poetry install --without dev
 
-      - name: Build with pyinstaller (non Windows, file)
+      - name: Build with pyinstaller (non Windows)
         if: "!contains(matrix.os, 'windows')"
         working-directory: pyinstaller
-        run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }} INFO 'onefile'
-        
-      - name: Build with pyinstaller (non Windows, folder)
-        if: "!contains(matrix.os, 'windows')"
-        working-directory: pyinstaller
-        run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name}}-${{ matrix.executable_os }}-dir $ INFO 'onedir'
+        run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }} INFO
 
-      - name: Build with pyinstaller (Windows, file)
+      - name: Build with pyinstaller (Windows)
         if: contains(matrix.os, 'windows')
         working-directory: pyinstaller
-        run: ./make.ps1 -ExeName "hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}" -LogLevel INFO 'onefile'
+        run: ./make.ps1 -ExeName "hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}" -LogLevel INFO
 
-      - name: Build with pyinstaller (Windows, folder)
-        if: contains(matrix.os, 'windows')
-        working-directory: pyinstaller
-        run: ./make.ps1 -ExeName "hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir" -LogLevel INFO -BuildType 'onedir'
-
-      - name: Upload executable artifact (file)
+      - name: Upload executable artifact
         uses: actions/upload-artifact@v3
         with:
           name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
-          path: pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
+          path: pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
 
-      - name: Upload executable artifact (folder)
+      - name: Upload spec file
         uses: actions/upload-artifact@v3
         with:
-          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir
-          path: pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}.spec
+          path: pyinstaller/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}.spec
 
-      - name: Version check (windows, file)
+      - name: Upload build directory
+        uses: actions/upload-artifact@v3
+        with:
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-build
+          path: pyinstaller/build/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}
+
+      - name: Version check (windows)
         if: contains(matrix.os, 'windows')
         run: |
           $tag = "${{ needs.bump-version.outputs.new_tag_name }}"
           $tagNoV = $tag.trim('v')
-          $hpcflow_vers = pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version
+          $hpcflow_vers = pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version
           $hpcflow_vers_expected = "hpcflow, version $tagNoV"
           echo $hpcflow_vers
           echo "$hpcflow_vers_expected"
@@ -228,48 +224,20 @@ jobs:
             exit 1
           }
 
-      - name: Version check (windows, folder)
-        if: contains(matrix.os, 'windows')
-        run: |
-          $tag = "${{ needs.bump-version.outputs.new_tag_name }}"
-          $tagNoV = $tag.trim('v')
-          $hpcflow_vers = pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}$-dir/{$ endraw %}{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir${{ matrix.executable_ext }}  --version
-          $hpcflow_vers_expected = "hpcflow, version $tagNoV"
-          echo $hpcflow_vers
-          echo "$hpcflow_vers_expected"
-          if ($hpcflow_vers -ne $hpcflow_vers_expected) {
-            exit 1
-          }
-
-      - name: Version check (non-windows, file)
+      - name: Version check (non-windows)
         if: "!contains(matrix.os, 'windows')"
         run: |
           tag=${{ needs.bump-version.outputs.new_tag_name }}
           tagNoV=${tag:1}
-          hpcflow_vers=$(pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version)
+          hpcflow_vers=$(pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version)
           hpcflow_vers_expected="hpcflow, version $tagNoV"
           echo $hpcflow_vers
           echo $hpcflow_vers_expected
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
-      - name: Version check (non-windows, folder)
-        if: "!contains(matrix.os, 'windows')"
+      - name: Run test suite on the frozen app
         run: |
-          tag=${{ needs.bump-version.outputs.new_tag_name }}
-          tagNoV=${tag:1}
-          hpcflow_vers=$(pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir${{ matrix.executable_ext }} --version)
-          hpcflow_vers_expected="hpcflow, version $tagNoV"
-          echo $hpcflow_vers
-          echo $hpcflow_vers_expected
-          [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
-
-      - name: Run test suite on the frozen app (file)
-        run: |
-          pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} test
-
-      - name: Run test suite on the frozen app (folder)
-        run: |
-          pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir${{ matrix.executable_ext }} test
+          pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} test
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -299,53 +267,41 @@ jobs:
       - name: Install dependencies
         run: poetry install --without dev
 
-      - name: Build with pyinstaller for CentOS (file)
+      - name: Build with pyinstaller for CentOS
         working-directory: pyinstaller
-        run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux INFO onefile
+        run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux INFO
 
-      - name: Build with pyinstaller for CentOS (folder)
-        working-directory: pyinstaller
-        run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir INFO onedir
-
-      - name: Upload executable artifact (file)
+      - name: Upload executable artifact
         uses: actions/upload-artifact@v3
         with:
           name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
-          path: pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
+          path: pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
 
-      - name: Upload executable artifact (folder)
+      - name: Upload spec file
         uses: actions/upload-artifact@v3
         with:
-          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
-          path: pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux.spec
+          path: pyinstaller/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux.spec
 
-      - name: Version check (file)
+      - name: Upload build directory
+        uses: actions/upload-artifact@v3
+        with:
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-build
+          path: pyinstaller/build/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
+
+      - name: Version check
         run: |
           tag=${{ needs.bump-version.outputs.new_tag_name }}
           tagNoV=${tag:1}
-          hpcflow_vers=$(pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux --version)
+          hpcflow_vers=$(pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux --version)
           hpcflow_vers_expected="hpcflow, version $tagNoV"
           echo $hpcflow_vers
           echo $hpcflow_vers_expected
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
-      - name: Version check (folder)
+      - name: Run test suite on the frozen app
         run: |
-          tag=${{ needs.bump-version.outputs.new_tag_name }}
-          tagNoV=${tag:1}
-          hpcflow_vers=$(pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir --version)
-          hpcflow_vers_expected="hpcflow, version $tagNoV"
-          echo $hpcflow_vers
-          echo $hpcflow_vers_expected
-          [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
-
-      - name: Run test suite on the frozen app (file)
-        run: |
-          pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux test
-
-      - name: Run test suite on the frozen app (folder)
-        run: |
-          pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir test
+          pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux test
 
   release-github-PyPI:
     needs: [bump-version, build-executables, build-executables-linux]
@@ -400,9 +356,6 @@ jobs:
             **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-win.exe
             **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-macOS
             **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
-            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-win-dir.zip
-            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-macOS-dir.zip
-            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir.zip
           prerelease: ${{ github.event.pull_request.base.ref == 'develop' }}
 
       - name: Release info
@@ -411,7 +364,7 @@ jobs:
           binaryYaml=$(python3 -c "
           from pathlib import Path
           out_yaml = ''
-          for i in ['win.exe', 'macOS', 'linux', 'win-dir.zip', 'macOS-dir.zip', 'linux-dir.zip']:
+          for i in ['win.exe', 'macOS', 'linux']:
             exe_name = 'hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-' + i
             url = 'https://github.com/hpcflow/hpcflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}/' + exe_name
             out_yaml += exe_name + ': ' + url + '\n'
